January 27, 2025
updating some methods with RGD Core and ignoring frequency of 0 for variants

March 4, 2024
updated for new file naming

January 11, 2024
updated to ignore variants with depth 0

November 20, 2023
improved logging to catch variants with total depth of 0

November 14, 2023
created and edited to load hrdp variants