@@ -21,6 +21,22 @@
             <ThresholdFilter level="INFO" onMatch="ACCEPT" onMismatch="DENY"/>
         </File>
 
+        <RollingFile name="qcDetail" append="true" fileName="logs/qcDetail.log" filePattern="logs/qcDetail.log.%d{yyyy-MM}">
+            <PatternLayout pattern="%d{yyyy-MM-dd HH:mm:ss} %p [%c] - %m%n"/>
+            <Policies>
+                <TimeBasedTriggeringPolicy interval="1"/><!-- 1 month roll over -->
+            </Policies>
+        </RollingFile>
+        <RollingFile name="qcStatus" append="true" fileName="logs/qcStatus.log" filePattern="logs/qcStatus.log.%d{yyyy-MM}">
+            <PatternLayout pattern="%d{yyyy-MM-dd HH:mm:ss} %p [%c] - %m%n"/>
+            <Policies>
+                <TimeBasedTriggeringPolicy interval="1"/>
+            </Policies>
+        </RollingFile>
+        <File name="qcSummary" append="false" fileName="logs/qcSummary.log">
+            <ThresholdFilter level="INFO" onMatch="ACCEPT" onMismatch="DENY"/>
+        </File>
+
     </Appenders>
 
     <Loggers>
@@ -31,6 +47,12 @@
             <AppenderRef ref="detail"/>
             <AppenderRef ref="status" level="info"/>
             <AppenderRef ref="summary" level="info"/>
+            <AppenderRef ref="Console" level="info"/>
+        </Logger>
+        <Logger name="qcStatus" level="debug" additivity="false">
+            <AppenderRef ref="qcDetail"/>
+            <AppenderRef ref="qcStatus" level="info"/>
+            <AppenderRef ref="qcSummary" level="info"/>
             <AppenderRef ref="Console" level="info"/>
         </Logger>
     </Loggers>
